新增文件,targetSdk 23权限修改,引导页修改

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -575,4 +575,10 @@
     <string name="USER_HELP">FAQ</string>
     <string name="doorbell_title">%1$s(%2$s)</string>
     <string name="input_rule">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!&lt;&gt;~@\'\"#$%^&amp;*()_-+=/*;:\|,.?/</string>
+    <string name="permission_camera_denied">Camera permission was denied. Please consider granting it in order to access the camera!</string>
+    <string name="permission_camera_never_askagain">Camera permission was denied with never ask again</string>
+    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
+    <string name="button_allow">Allow</string>
+    <string name="button_deny">Refuse</string>
+    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
 </resources>
