--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -56,7 +56,7 @@
   <string name="NO_SDCARD">Отсутствует карта памяти micro SD</string>
   <string name="PHONE_EMAIL">E-mail</string>
   <string name="PASSWORD">Пароль</string>
-  <string name="LOGIN">Логин</string>
+  <string name="SignIn">Логин</string>
   <string name="FORGOT_PWD">Я не помню пароль</string>
   <string name="FORGOT_PWD_1">Забыли пароль?</string>
   <string name="SIGN_UP">Регистрация</string>
