--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -56,7 +56,7 @@
     <string name="NO_SDCARD">无可用的Micro SD卡</string>
     <string name="PHONE_EMAIL">手机号/邮箱</string>
     <string name="PASSWORD">密码</string>
-    <string name="LOGIN">登录</string>
+    <string name="SignIn">登录</string>
     <string name="FORGOT_PWD">忘记密码</string>
     <string name="FORGOT_PWD_1">忘记密码？</string>
     <string name="SIGN_UP">新用户</string>
@@ -576,4 +576,6 @@
     <string name="doorbell_title">%1$s(%2$s)</string>
 
     <string name="send_email_tip_content">系统已经发送邮件到\n%s\n请点击邮件的链接重置密码</string>
+
+    <string name="item_register">注册</string>
 </resources>
