--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="NO_SDCARD">There is no Micro SD card</string>
     <string name="PHONE_EMAIL">E-mail</string>
     <string name="PASSWORD">Password</string>
-    <string name="LOGIN">Sign In</string>
+    <string name="SignIn">Sign In</string>
     <string name="FORGOT_PWD">Forgot password</string>
     <string name="FORGOT_PWD_1">Forgot ?</string>
     <string name="SIGN_UP">Sign Up</string>
@@ -582,6 +582,5 @@
     <string name="button_deny">Refuse</string>
     <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="item_register">register</string>
 </resources>
