--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -583,4 +583,6 @@
     <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
 
     <string name="item_register">register</string>
+
+    <string name="input_new_pwd">Please Input password</string>
 </resources>
