--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -587,4 +587,7 @@
     <string name="input_new_pwd">Please Input password</string>
     <!--别删-->
     <string name="item_just_for_test">05</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
