--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -636,5 +636,10 @@
     <string name="permissions_tips_gallery">This app requesting access to your Gallery</string>
     <string name="permissions_denied_tips">Unable to get pictures</string>
     <string name="maxsize_zero_tip">Maxsize should be greater than zero</string>
+    <string name="permission_info">App requires permission to Storage to view images.</string>
+    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
+    <string name="permission_ok">OK</string>
+    <string name="permission_settings">Settings</string>
+    <string name="permission_package">package</string>
 
 </resources>
