--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -839,4 +839,5 @@
 
     <string name="delay_record_guide_hint">日出日落、云彩变幻、家庭生活、\nBaby成长…每天都有精彩和成长，\n每一刻都值得被记录。</string>
     <string name="delay_record_guide">延时摄影</string>
+    <string name="delay_record_hint_information_3">正在合成视频</string>
 </resources>
