获取好友请求为空修改

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -841,7 +841,7 @@
   <string name="Tap1_iHome_ClearRecord">清空消息记录</string>
   <string name="Tap3_FriendsAdd_RequestContents">想加你为好友</string>
   <string name="Tap3_Friends_NoBindTips">使用亲友功能需要绑定手机/邮箱</string>
-  <string name="Tap3_FriendsAdd_StuffContents">我是%@</string>
+  <string name="Tap3_FriendsAdd_StuffContents">我是</string>
   <string name="Tap3_Userinfo_NoCamera">相机无法使用</string>
   <string name="ClearingTips">清除中…</string>
   <string name="CancelingTips">正在取消…</string>
