--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -837,4 +837,19 @@
     <string name="delay_record_hint_information_1">剩余时间:%1$s</string>
     <string name="delay_record_hint_information_2">视频已合并完成</string>
 
+    <!--新加-->
+    <string name="Tap3_ShareDevice_CancelShareTips">取消分享失败</string>
+    <string name="Tap3_FriendsAdd_SendButton">发送请求</string>
+    <string name="Tap3_FriendsAdd_NoContacts">暂无联系人</string>
+    <string name="Tap3_SavePic">保存图片</string>
+    <string name="Tap1_iHome_Associated">已关联</string>
+    <string name="Tap1_iHome_NotAssociated">未关联</string>
+    <string name="Tap1_iHome_ClearRecord">清空消息记录</string>
+    <string name="Tap3_FriendsAdd_RequestContents">想加你为好友</string>
+    <string name="Tap3_Friends_NoBindTips">使用亲友功能需要绑定手机/邮箱</string>
+    <string name="Tap3_FriendsAdd_StuffContents">我是</string>
+    <string name="Tap3_Userinfo_NoCamera">相机无法使用</string>
+    <string name="ClearingTips">清除中…</string>
+    <string name="CancelingTips">正在取消…</string>
+
 </resources>
