--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -851,5 +851,6 @@
     <string name="Tap3_Userinfo_NoCamera">相机无法使用</string>
     <string name="ClearingTips">清除中…</string>
     <string name="CancelingTips">正在取消…</string>
+    <string name="Msg_LoadDialog">加载中</string>
 
 </resources>
