--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -837,6 +837,7 @@
 
     <string name="delay_record_hint_information_3">正在合成视频</string>
   <string name="Tap1_Setting_Opened">已开启</string>
+  <string name="Tips_Call_Answer_In_Other">通话已在其他设备处理</string>
 
 
 </resources>
