--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -829,4 +829,9 @@
     <string name="wifi_authentication">Verify %s WiFi connection</string>
     <string name="wifi_hasnot">Not find this WIFI</string>
     <string name="Tap1_Setting_Opened">已开启</string>
+    <string name="Tips_Call_Answer_In_Other">通话已在其他设备处理</string>
+    <string name="Tips_New_Call_Coming">有新朋友来访</string>
+    <string name="Tips_New_Call_Come_Listen">有新的朋友 $1%s:来访,是否接听?</string>
+    <string name="listen">接听</string>
+    <string name="ignore">忽略</string>
 </resources>
