--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -836,4 +836,6 @@
     <string name="ignore">忽略</string>
     <string name="loading">加载中</string>
     <string name="nomore">没有更多了</string>
+    <string name="not_login">还未登陆</string>
+    <string name="request_time_out">请求数据超时</string>
 </resources>
