--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -836,4 +836,7 @@
     <string name="ignore">忽略</string>
     <string name="loading">加载中</string>
     <string name="nomore">没有更多了</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
